# adwaita-rust-skeleton

./: Cargo.toml  README.md
src/: application.rs  config.rs  main.rs  window.rs
